--- a/package.json
+++ b/package.json
@@ -5,5 +5,44 @@
   "main": "lib/index.js",
   "repository": "https://github.com/Gurimarukin/bc-dl.git",
   "author": "Gurimarukin",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "prettier": "prettier --check \"./{src,test}/**/*.ts\"",
+    "prettier-fix": "prettier --write \"./{src,test}/**/*.ts\"",
+    "import-sort": "import-sort --list-different \"./{src,test}/**/*.ts\"",
+    "import-sort-fix": "import-sort --write \"./{src,test}/**/*.ts\"",
+    "lint": "eslint --cache --max-warnings 0 --ext .ts src test",
+    "lint-fix": "eslint --fix --cache --max-warnings 0 --ext .ts src test",
+    "jest": "jest",
+    "jest-coverage": "jest --ci --coverage",
+    "test": "yarn run prettier && yarn run import-sort && yarn run lint && yarn run jest"
+  },
+  "devDependencies": {
+    "@type-config/strict": "^1.1.1",
+    "@types/jest": "^26.0.20",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-fp-ts": "^0.1.12",
+    "eslint-plugin-functional": "^3.2.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "fp-ts": "^2.9.3",
+    "import-sort-cli": "^6.0.0",
+    "import-sort-parser-typescript": "^6.0.0",
+    "import-sort-style-module": "^6.0.0",
+    "io-ts": "^2.2.13",
+    "jest": "^26.6.3",
+    "monocle-ts": "^2.3.5",
+    "newtype-ts": "^0.3.4",
+    "prettier": "^2.2.1",
+    "ts-jest": "^26.5.0",
+    "typescript": "^4.1.3"
+  },
+  "importSort": {
+    ".js, .ts": {
+      "style": "module",
+      "parser": "typescript"
+    }
+  }
 }
