--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Gurimarukin",
   "license": "MIT",
   "scripts": {
+    "dl": "ts-node src/index.ts",
     "prettier": "prettier --check \"./{src,test}/**/*.ts\"",
     "prettier-fix": "prettier --write \"./{src,test}/**/*.ts\"",
     "import-sort": "import-sort --list-different \"./{src,test}/**/*.ts\"",
@@ -22,6 +23,8 @@
     "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
+    "axios": "^0.21.1",
+    "decline-ts": "^0.7.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-fp-ts": "^0.1.12",
@@ -33,10 +36,12 @@
     "import-sort-style-module": "^6.0.0",
     "io-ts": "^2.2.13",
     "jest": "^26.6.3",
+    "jsdom": "^16.4.0",
     "monocle-ts": "^2.3.5",
     "newtype-ts": "^0.3.4",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.0",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
   "importSort": {
@@ -44,5 +49,8 @@
       "style": "module",
       "parser": "typescript"
     }
+  },
+  "dependencies": {
+    "@types/jsdom": "^16.2.6"
   }
 }
