--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jsdom": "^16.4.0",
     "monocle-ts": "^2.3.5",
     "newtype-ts": "^0.3.4",
+    "node-id3": "^0.2.2",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.0",
     "ts-node": "^9.1.1",
