--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build": "tsc -p ./tsconfig.build.json",
     "dl": "node --unhandled-rejections=strict lib/dl.js",
     "tag": "node --unhandled-rejections=strict lib/tag.js",
-    "ts-dl": "ts-node src/dl.ts",
-    "ts-tag": "ts-node src/tag.ts",
+    "ts-dl": "ts-node --unhandled-rejections=strict src/dl.ts",
+    "ts-tag": "ts-node --unhandled-rejections=strict src/tag.ts",
     "prettier": "prettier --check \"./{src,test}/**/*.ts\"",
     "prettier-fix": "prettier --write \"./{src,test}/**/*.ts\"",
     "import-sort": "import-sort --list-different \"./{src,test}/**/*.ts\"",
