--- a/package.json
+++ b/package.json
@@ -27,17 +27,18 @@
   "devDependencies": {
     "@type-config/strict": "^1.1.1",
     "@types/jest": "^26.0.20",
+    "@types/jsdom": "^16.2.6",
     "@types/rimraf": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "axios": "^0.21.1",
     "decline-ts": "^0.9.0",
-    "eslint": "^7.18.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-fp-ts": "^0.1.12",
-    "eslint-plugin-functional": "^3.2.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "fp-ts": "^2.9.3",
+    "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-fp-ts": "^0.3.0",
+    "eslint-plugin-functional": "^4.0.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "fp-ts": "^2.11.7",
     "import-sort-cli": "^6.0.0",
     "import-sort-parser-typescript": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
@@ -58,8 +59,5 @@
       "style": "module",
       "parser": "typescript"
     }
-  },
-  "dependencies": {
-    "@types/jsdom": "^16.2.6"
   }
 }
