--- a/package.json
+++ b/package.json
@@ -10,21 +10,20 @@
     "build": "tsc -p ./tsconfig.build.json",
     "dl": "node --unhandled-rejections=strict lib/dl.js",
     "tag": "node --unhandled-rejections=strict lib/tag.js",
-    "ts-dl": "NODE_OPTIONS='--unhandled-rejections=strict' ts-node src/dl.ts",
-    "ts-tag": "NODE_OPTIONS='--unhandled-rejections=strict' ts-node src/tag.ts",
+    "tsDl": "NODE_OPTIONS='--unhandled-rejections=strict' ts-node src/dl.ts",
+    "tsTag": "NODE_OPTIONS='--unhandled-rejections=strict' ts-node src/tag.ts",
     "prettier": "prettier --check \"./{src,test}/**/*.ts\"",
-    "prettier-fix": "prettier --write \"./{src,test}/**/*.ts\"",
-    "import-sort": "import-sort --list-different \"./{src,test}/**/*.ts\"",
-    "import-sort-fix": "import-sort --write \"./{src,test}/**/*.ts\"",
+    "prettierFix": "prettier --write \"./{src,test}/**/*.ts\"",
     "lint": "eslint --cache --max-warnings 0 --ext .ts src test",
-    "lint-fix": "eslint --fix --cache --max-warnings 0 --ext .ts src test",
+    "lintFix": "eslint --fix --cache --max-warnings 0 --ext .ts src test",
     "jest": "jest",
-    "jest-unit": "jest --testPathPattern=.*\\.spec\\.ts",
-    "jest-coverage": "jest --ci --coverage",
-    "style": "yarn run prettier && yarn run import-sort && yarn run lint",
-    "test": "yarn run style && yarn run jest-unit"
+    "jestUnit": "jest --testPathPattern=.*\\.spec\\.ts",
+    "jestCoverage": "jest --ci --coverage",
+    "style": "yarn run prettier && yarn run lint",
+    "test": "yarn run style && yarn run jestUnit"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.1.1",
     "@type-config/strict": "^1.1.1",
     "@types/jest": "^26.0.20",
     "@types/jsdom": "^16.2.6",
@@ -39,9 +38,6 @@
     "eslint-plugin-functional": "^4.0.2",
     "eslint-plugin-prettier": "^4.0.0",
     "fp-ts": "^2.11.7",
-    "import-sort-cli": "^6.0.0",
-    "import-sort-parser-typescript": "^6.0.0",
-    "import-sort-style-module": "^6.0.0",
     "io-ts": "^2.2.13",
     "jest": "^26.6.3",
     "jsdom": "^16.4.0",
@@ -53,11 +49,5 @@
     "ts-jest": "^26.5.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
-  },
-  "importSort": {
-    ".js, .ts": {
-      "style": "module",
-      "parser": "typescript"
-    }
   }
 }
