--- a/package.json
+++ b/package.json
@@ -23,31 +23,31 @@
     "test": "yarn run style && yarn run jestUnit"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^3.1.1",
-    "@type-config/strict": "^1.1.1",
-    "@types/jest": "^26.0.20",
-    "@types/jsdom": "^16.2.6",
-    "@types/rimraf": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
-    "axios": "^0.21.1",
-    "decline-ts": "^0.9.0",
-    "eslint": "^8.6.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-fp-ts": "^0.3.0",
-    "eslint-plugin-functional": "^4.0.2",
-    "eslint-plugin-prettier": "^4.0.0",
-    "fp-ts": "^2.11.7",
-    "io-ts": "^2.2.13",
-    "jest": "^26.6.3",
-    "jsdom": "^16.4.0",
-    "monocle-ts": "^2.3.5",
-    "newtype-ts": "^0.3.4",
-    "node-id3": "^0.2.2",
-    "prettier": "^2.2.1",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "@trivago/prettier-plugin-sort-imports": "3.1.1",
+    "@type-config/strict": "1.1.1",
+    "@types/jest": "26.0.20",
+    "@types/jsdom": "16.2.6",
+    "@types/rimraf": "3.0.0",
+    "@typescript-eslint/eslint-plugin": "5.9.0",
+    "@typescript-eslint/parser": "5.9.0",
+    "axios": "0.21.1",
+    "decline-ts": "0.9.0",
+    "eslint": "8.6.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-fp-ts": "0.3.0",
+    "eslint-plugin-functional": "4.0.2",
+    "eslint-plugin-prettier": "4.0.0",
+    "fp-ts": "2.11.7",
+    "io-ts": "2.2.13",
+    "jest": "26.6.3",
+    "jsdom": "16.4.0",
+    "monocle-ts": "2.3.5",
+    "newtype-ts": "0.3.4",
+    "node-id3": "0.2.2",
+    "prettier": "2.2.1",
+    "rimraf": "3.0.2",
+    "ts-jest": "26.5.0",
+    "ts-node": "9.1.1",
+    "typescript": "4.1.3"
   }
 }
