--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "rimraf": "3.0.2",
     "ts-jest": "26.5.0",
     "ts-node": "9.1.1",
+    "tslib": "2.8.1",
     "typescript": "5.8.2"
   }
 }
