--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
 
-      - run: yarn install --frozen-lockfile
+      - run: yarn install --immutable
 
       # typescript
       - run: yarn tsc
