--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dl": "vite-node src/dl.ts",
     "tag": "vite-node src/tag.ts",
     "~compile": "tsc -w --preserveWatchOutput",
-    "_prettier": "prettier .",
+    "_prettier": "prettier --cache .",
     "formatCheck": "yarn _prettier --check",
     "format": "yarn _prettier --write",
     "lint": "eslint . --cache --max-warnings 0",
@@ -22,7 +22,7 @@
     "jestUnit": "jest --testPathPattern=.*\\.spec\\.ts"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "3.1.1",
+    "@trivago/prettier-plugin-sort-imports": "5.2.2",
     "@types/jest": "26.0.20",
     "@types/jsdom": "16.2.6",
     "@types/rimraf": "3.0.0",
@@ -34,7 +34,6 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-fp-ts": "0.3.0",
     "eslint-plugin-functional": "4.0.2",
-    "eslint-plugin-prettier": "4.0.0",
     "fp-ts": "2.11.7",
     "io-ts": "2.2.13",
     "jest": "26.6.3",
@@ -42,7 +41,7 @@
     "monocle-ts": "2.3.5",
     "newtype-ts": "0.3.4",
     "node-id3": "0.2.2",
-    "prettier": "2.2.1",
+    "prettier": "3.5.3",
     "rimraf": "3.0.2",
     "ts-jest": "26.5.0",
     "ts-node": "9.1.1",
