--- a/package.json
+++ b/package.json
@@ -22,18 +22,16 @@
     "jestUnit": "jest --testPathPattern=.*\\.spec\\.ts"
   },
   "devDependencies": {
+    "@eslint/js": "9.23.0",
     "@trivago/prettier-plugin-sort-imports": "5.2.2",
     "@types/jest": "26.0.20",
     "@types/jsdom": "16.2.6",
     "@types/rimraf": "3.0.0",
-    "@typescript-eslint/eslint-plugin": "5.9.0",
-    "@typescript-eslint/parser": "5.9.0",
     "axios": "0.21.1",
     "decline-ts": "0.9.0",
-    "eslint": "8.6.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-fp-ts": "0.3.0",
-    "eslint-plugin-functional": "4.0.2",
+    "eslint": "9.23.0",
+    "eslint-plugin-fp-ts": "0.4.0",
+    "eslint-plugin-functional": "9.0.1",
     "fp-ts": "2.11.7",
     "io-ts": "2.2.13",
     "jest": "26.6.3",
@@ -46,6 +44,7 @@
     "ts-jest": "26.5.0",
     "ts-node": "9.1.1",
     "tslib": "2.8.1",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "typescript-eslint": "8.28.0"
   }
 }
