--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "format": "yarn _prettier --write",
     "lint": "eslint . --cache --max-warnings 0",
     "lintFix": "yarn lint --fix",
-    "jestUnit": "jest --testPathPattern=.*\\.spec\\.ts"
+    "jestUnit": "jest --testPathPattern=\".*\\.spec\\.ts\"",
+    "jestCoverage": "jest --ci --coverage",
+    "ci": "yarn tsc && yarn formatCheck && yarn lint && yarn jestUnit"
   },
   "devDependencies": {
     "@eslint/js": "9.23.0",
     "@trivago/prettier-plugin-sort-imports": "5.2.2",
-    "@types/jest": "26.0.20",
+    "@types/jest": "29.5.14",
     "@types/jsdom": "16.2.6",
-    "@types/rimraf": "3.0.0",
     "axios": "0.21.1",
     "decline-ts": "0.9.0",
     "eslint": "9.23.0",
@@ -34,14 +35,13 @@
     "eslint-plugin-functional": "9.0.1",
     "fp-ts": "2.11.7",
     "io-ts": "2.2.13",
-    "jest": "26.6.3",
+    "jest": "29.7.0",
     "jsdom": "16.4.0",
     "monocle-ts": "2.3.5",
     "newtype-ts": "0.3.4",
     "node-id3": "0.2.2",
     "prettier": "3.5.3",
-    "rimraf": "3.0.2",
-    "ts-jest": "26.5.0",
+    "ts-jest": "29.3.1",
     "ts-node": "9.1.1",
     "tslib": "2.8.1",
     "typescript": "5.8.2",
